# miden-basic-auth-vuln-poc

./: Cargo.toml
tests/: burn_and_mint.rs  main.rs
